# vegan-ai-nutritionist

./: .gitignore  README.md  requirements.txt
infra/data_ingestion/: variables.tf
infra/data_processing/: main.tf  variables.tf
infra/model_training/: main.tf  variables.tf
infra/s3/: main.tf
modules/: app.py  config.py
modules/data_ingestion/: pyproject.toml
modules/data_ingestion/src/: data_collection.py  data_collection_old.py  data_ingestion.py  data_ingestion_old.py  data_transformer.py  s3_storage.py  springer_api_client.py
modules/data_processing/: bedrock_embedding.py  pyproject.toml
modules/data_processing/src/: config.py  data_loading.py  data_processing.py  data_transformer.py  embeddings.py  vector_storage.py
modules/inference/src/: delete_endpoint.py  inference_pipeline.py  model_deployment.py  model_inference.py  model_utils.py
modules/model_training/: ENVIRONMENT.md  pyproject.toml  requirements.txt
modules/model_training/datasets/: testing_data.json  training_data.json
modules/model_training/src/: config.py  tokenizer.py  train.py  trainer.py  utils.py
modules/model_training/src/training_scripts/: train.py
modules/q_and_a_dataset/: config.py  examples.py  generate_training_data.py
modules/q_and_a_dataset/data/: training_data.json
modules/q_and_a_dataset/src/: api_clients.py  config.py  generate_training_data.py  gpt.py  retrieval.py
modules/utils/: logger.py  utils.py
modules/web_app/: app.py  pyproject.toml
notebooks/: ReadMe.md  data_ingestion.ipynb  data_processing.ipynb  inference.ipynb  model_training.ipynb
notebooks/.ipynb_checkpoints/: data_processing-checkpoint.ipynb
notebooks/scripts/: train.py
