[tool.poetry]
name = "data-ingestion"
version = "0.1.0"
description = "Module for collecting raw data, in this case being papers about vegan or plant-based diets."
authors = ["Ravinder Rai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"
pandas = "2.2.2"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.1"
boto3 = "^1.35.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
