[tool.poetry]
name = "data-processing"
version = "0.1.0"
description = "Environment for processing text data and storing it in a vector database."
authors = ["Ravinder Rai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
notebook = "^7.2.2"
opensearch-py = "^2.7.1"
requests-aws4auth = "^1.3.1"
langchain = "^0.2.16"
huggingface-hub = "^0.24.7"
langchain-community = "^0.2.16"
boto3 = "1.34.131"
langchain-aws = "^0.1.18"
torchvision = "^0.19.1"
transformers = "^4.44.2"
torch = "^2.4.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
