[tool.poetry]
name = "model-training"
version = "0.1.0"
description = "Model training pipeline to fine-tune a smaller language model"
authors = ["Ravinder Rai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
