[tool.poetry]
name = "web app"
version = "0.1.0"
description = "A UI for the Vegan Nutritionist Chatbot"
authors = ["Ravinder Rai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
boto3 = "1.34.131"
langchain = "^0.3.0"
python-dotenv = "^1.0.1"
opensearch-py = "^2.7.1"
langchain-aws = "^0.2.0"
requests-aws4auth = "^1.3.1"
langchain-community = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
